--- a/index.html
+++ b/index.html
@@ -10,9 +10,50 @@
 
     <link rel="stylesheet" href="index.css" />
 
+    <link rel="stylesheet" id="theme" href="light.css" />
+    <link rel="preload" href="dark.css" as="style" />
+
     <title>Random Issue Picker</title>
   </head>
   <body>
+    <script>
+      /**
+       * Sets the theme of the page. If no theme is provided, it will toggle between light and dark.
+       *
+       * @param {string | undefined} theme The theme to set.
+       *
+       * @returns {void}
+       */
+      function setTheme(theme) {
+        /** @type {HTMLLinkElement} */
+        const css = document.getElementById("theme");
+
+        if (!theme) theme = css.href.endsWith("light.css") ? "dark.css" : "light.css";
+
+        css.href = theme;
+
+        console.log(theme);
+
+        localStorage.setItem("theme", theme);
+
+        document.getElementById("themeButton").textContent = theme === "light.css" ? "🔆" : "🌙";
+      }
+    </script>
+
+    <div style="float: right">
+      <button onclick="setTheme()" id="themeButton">🔆</button>
+    </div>
+
+    <script>
+      let theme = localStorage.getItem("theme");
+
+      const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
+
+      if (!theme && prefersDarkScheme.matches) theme = "dark.css";
+
+      setTheme(theme);
+    </script>
+
     <h1>Random Issue Picker</h1>
 
     <p>Current open issues: <a id="issues">...</a></p>
@@ -53,22 +94,40 @@
 
         const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1`);
 
-        return response.headers.get("Link").match(/page=(\d+)>; rel="last"/)[1];
+        if ((await response.json()).length === 0) return 0;
+
+        const link = response.headers.get("Link");
+        if (!link) return 1;
+
+        return link.match(/page=(\d+)>; rel="last"/)[1];
       }
+
+      /**
+       * Github API response for an issue.
+       *
+       * @typedef {{
+       *   number: number,
+       *   title: string,
+       *   user: {
+       *     login: string,
+       *     avatar_url: string,
+       *     html_url: string
+       *   },
+       *   html_url: string
+       * }} Issue
+       */
 
       /**
        * Fetches a random issue from a GitHub repository.
        *
-       * @returns {Promise<string>} The random issue url.
+       * @returns {Promise<Issue>} The random issue url.
        */
       async function randomIssue() {
         const page = Math.floor(Math.random() * repoInfo.issues) + 1;
         const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${page}`);
 
         const issues = await response.json();
-        const issue = issues[0];
-
-        return issue.html_url;
+        return issues[0];
       }
     </script>
 
@@ -85,17 +144,68 @@
       type="text"
       id="url"
       name="url"
+      style="width: 100%; max-width: 500px"
       onkeypress="this.onchange();"
       onpaste="this.onchange();"
       oninput="this.onchange();"
       onchange="onUrlInput()" />
 
-    <button
-      onclick="(async () => {
+    <script>
+      /**
+       * Creates an entry in the history list for an issue.
+       *
+       * @param {Issue} issue The issue to create an entry for.
+       *
+       * @returns {void}
+       */
+      function makeIssueEntry(issue) {
+        const history = document.getElementById("history");
+
+        const issueEntry = document.createElement("li");
+        issueEntry.innerHTML = `Issue <a href="${issue.html_url}">#${issue.number}</a>: ${issue.title}<br /><div style="margin-top: 1vh; text-align: bottom; display: flex; align-items: end">Opened by&nbsp<a href="${issue.user.html_url}" style="display: flex; align-items: end"><img class="avatar" src="${issue.user.avatar_url}" />&nbsp${issue.user.login}</a></div>`;
+
+        history.appendChild(issueEntry);
+      }
+
+      async function openRandomIssue() {
         const issue = await randomIssue();
-        window.open(issue, '_blank');
-      })()">
-      Pick random issue
-    </button>
+
+        const issues = JSON.parse(localStorage.getItem("issues"));
+        if (issues) {
+          issues.push(issue);
+          localStorage.setItem("issues", JSON.stringify(issues));
+        } else localStorage.setItem("issues", JSON.stringify([issue]));
+
+        localStorage.getItem("openInNewTab") === "true" ?? window.open(issue.url, "_blank");
+
+        makeIssueEntry(issue);
+      }
+    </script>
+
+    <br />
+
+    <button style="margin-top: 2vh" onclick="openRandomIssue()">Pick random issue</button>
+    <input type="checkbox" id="openInNewTab" onchange="localStorage.setItem('openInNewTab', this.checked)" />
+    <label for="openInNewTab">Open in new tab</label>
+
+    <br />
+
+    <div id="exampleUrls">
+      <p style="margin-bottom: 1vh">Example URLs:</p>
+      <ul style="margin-top: 0">
+        <li>https://github.com/oven-sh/bun</li>
+        <li>https://github.com/tobycm/akatsuki-du-ca-bot-remastered.git</li>
+        <li>git@github.com:pdt1806/discord-status-as-image.git</li>
+      </ul>
+    </div>
+
+    <p style="margin-bottom: 1vh">History:</p>
+    <ul style="margin-top: 0" id="history"></ul>
+
+    <script>
+      const issues = JSON.parse(localStorage.getItem("issues"));
+
+      if (issues) issues.forEach((issue) => makeIssueEntry(issue));
+    </script>
   </body>
 </html>
