--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
 
         css.href = theme;
 
-        console.log(theme);
-
         localStorage.setItem("theme", theme);
 
         document.getElementById("themeButton").textContent = theme === "light.css" ? "🔆" : "🌙";
@@ -92,14 +90,20 @@
       async function fetchIssuesCount() {
         if (repoInfo.name === null) return -1;
 
-        const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1`);
+        try {
+          const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1`);
 
-        if ((await response.json()).length === 0) return 0;
+          if (!response.ok) return -1;
 
-        const link = response.headers.get("Link");
-        if (!link) return 1;
+          if ((await response.json()).length === 0) return 0;
 
-        return link.match(/page=(\d+)>; rel="last"/)[1];
+          const link = response.headers.get("Link");
+          if (!link) return 1;
+
+          return link.match(/page=(\d+)>; rel="last"/)[1];
+        } catch {
+          return -1;
+        }
       }
 
       /**
@@ -123,6 +127,8 @@
        * @returns {Promise<Issue>} The random issue url.
        */
       async function randomIssue() {
+        if (repoInfo.issues === -1) return null;
+
         const page = Math.floor(Math.random() * repoInfo.issues) + 1;
         const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${page}`);
 
@@ -169,6 +175,7 @@
 
       async function openRandomIssue() {
         const issue = await randomIssue();
+        if (!issue) return;
 
         const issues = JSON.parse(localStorage.getItem("issues"));
         if (issues) {
@@ -176,7 +183,7 @@
           localStorage.setItem("issues", JSON.stringify(issues));
         } else localStorage.setItem("issues", JSON.stringify([issue]));
 
-        localStorage.getItem("openInNewTab") === "true" ?? window.open(issue.url, "_blank");
+        if (localStorage.getItem("openInNewTab") === "true") window.open(issue.html_url, "_blank");
 
         makeIssueEntry(issue);
       }
