--- a/index.html
+++ b/index.html
@@ -129,7 +129,23 @@
       async function randomIssue() {
         if (repoInfo.issues === -1) return null;
 
-        const page = Math.floor(Math.random() * repoInfo.issues) + 1;
+        let pickedIssues = localStorage.getItem("pickedIssues");
+        if (!pickedIssues) {
+          const issues = localStorage.getItem("issues");
+          if (issues) {
+            issues = JSON.parse(issues);
+            localStorage.setItem("pickedIssues", JSON.stringify(issues.map((issue) => issue.number)));
+            pickedIssues = issues.map((issue) => issue.number);
+          } else pickedIssues = [];
+        }
+        pickedIssues = JSON.parse(pickedIssues);
+
+        let page = Math.floor(Math.random() * repoInfo.issues) + 1;
+        while (pickedIssues && pickedIssues.includes(page)) page = Math.floor(Math.random() * repoInfo.issues) + 1;
+
+        pickedIssues.push(page);
+        localStorage.setItem("pickedIssues", pickedIssues);
+
         const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${page}`);
 
         const issues = await response.json();
@@ -170,7 +186,7 @@
         const issueEntry = document.createElement("li");
         issueEntry.innerHTML = `Issue <a href="${issue.html_url}">#${issue.number}</a>: ${issue.title}<br /><div style="margin-top: 1vh; text-align: bottom; display: flex; align-items: end">Opened by&nbsp<a href="${issue.user.html_url}" style="display: flex; align-items: end"><img class="avatar" src="${issue.user.avatar_url}" />&nbsp${issue.user.login}</a></div>`;
 
-        history.appendChild(issueEntry);
+        history.insertBefore(issueEntry, history.firstChild);
       }
 
       async function openRandomIssue() {
