--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
     <h1>Random Issue Picker</h1>
 
+    <hr />
+
     <p>Current open issues: <a id="issues">...</a></p>
 
     <script>
@@ -129,38 +131,27 @@
       async function randomIssue() {
         if (repoInfo.issues === -1) return null;
 
-        let pickedIssues = localStorage.getItem("pickedIssues");
-        if (!pickedIssues) {
-          const issues = localStorage.getItem("issues");
-          if (issues) {
-            issues = JSON.parse(issues);
-            localStorage.setItem("pickedIssues", JSON.stringify(issues.map((issue) => issue.number)));
-            pickedIssues = issues.map((issue) => issue.number);
-          } else pickedIssues = [];
-        }
-        pickedIssues = JSON.parse(pickedIssues);
+        let issues = localStorage.getItem("issues");
+        if (issues) issues = JSON.parse(issues).map((issue) => issue.number);
+        else issues = [];
 
         let page = Math.floor(Math.random() * repoInfo.issues) + 1;
-        while (pickedIssues && pickedIssues.includes(page)) page = Math.floor(Math.random() * repoInfo.issues) + 1;
-
-        pickedIssues.push(page);
-        localStorage.setItem("pickedIssues", pickedIssues);
+        while (issues.includes(page)) page = Math.floor(Math.random() * repoInfo.issues) + 1;
 
         const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${page}`);
 
-        const issues = await response.json();
-        return issues[0];
+        return (await response.json())[0];
       }
     </script>
 
     <script>
       async function onUrlInput() {
-        const name = parseUrl(document.querySelector("#url").value);
+        const name = parseUrl(document.getElementById("url").value);
         if (repoInfo.name === name) return;
         repoInfo.name = name;
 
         repoInfo.issues = await fetchIssuesCount();
-        document.querySelector("#issues").textContent = repoInfo.issues === -1 ? "..." : repoInfo.issues;
+        document.getElementById("issues").textContent = repoInfo.issues === -1 ? "..." : repoInfo.issues;
       }
     </script>
 
@@ -176,6 +167,30 @@
       onchange="onUrlInput()" />
 
     <script>
+      const url = document.getElementById("url").value;
+      if (url) onUrlInput();
+    </script>
+
+    <script>
+      /**
+       * Delete an issue from the history list.
+       *
+       * @param {number} issueNumber The number of the issue to delete.
+       *
+       * @returns {void}
+       */
+
+      function deleteIssue(issueNumber) {
+        const issues = JSON.parse(localStorage.getItem("issues"));
+        const newIssues = issues.filter((issue) => issue.number !== issueNumber);
+        localStorage.setItem("issues", JSON.stringify(newIssues));
+
+        // refresh
+        const history = document.getElementById("history");
+        history.innerHTML = "";
+        newIssues.forEach((issue) => makeIssueEntry(issue));
+      }
+
       /**
        * Creates an entry in the history list for an issue.
        *
@@ -187,7 +202,15 @@
         const history = document.getElementById("history");
 
         const issueEntry = document.createElement("li");
-        issueEntry.innerHTML = `Issue <a href="${issue.html_url}">#${issue.number}</a>: ${issue.title}<br /><div style="margin-top: 1vh; text-align: bottom; display: flex; align-items: end">Opened by&nbsp<a href="${issue.user.html_url}" style="display: flex; align-items: end"><img class="avatar" src="${issue.user.avatar_url}" />&nbsp${issue.user.login}</a></div>`;
+        issueEntry.innerHTML =
+          `Issue <a href="${issue.html_url}">#${issue.number}</a>: ${issue.title}` +
+          "<br />" +
+          '<div class="bottom" style="margin-top: 1vh">' +
+          `Opened by&nbsp<a class="bottom" href="${issue.user.html_url}">` +
+          `<img class="avatar" src="${issue.user.avatar_url}" />` +
+          `&nbsp${issue.user.login}</a>` +
+          "</div>" +
+          `<button style="margin-top: 1vh" onClick="deleteIssue(${issue.number})">Delete</button>`;
 
         history.insertBefore(issueEntry, history.firstChild);
       }
@@ -214,6 +237,10 @@
     <input type="checkbox" id="openInNewTab" onchange="localStorage.setItem('openInNewTab', this.checked)" />
     <label for="openInNewTab">Open in new tab</label>
 
+    <script>
+      if (localStorage.getItem("openInNewTab") === "true") document.getElementById("openInNewTab").checked = true;
+    </script>
+
     <br />
 
     <div id="exampleUrls">
@@ -225,6 +252,8 @@
       </ul>
     </div>
 
+    <hr />
+
     <p style="margin-bottom: 1vh">History:</p>
     <ul style="margin-top: 0" id="history"></ul>
 
@@ -232,6 +261,25 @@
       const issues = JSON.parse(localStorage.getItem("issues"));
 
       if (issues) issues.forEach((issue) => makeIssueEntry(issue));
+    </script>
+
+    <hr />
+
+    <footer>
+      <div class="bottom">
+        Made by&nbsp
+        <a class="bottom" href="https://github.com/tobycm"
+          ><img class="avatar" src="https://avatars.githubusercontent.com/u/62174797" />&nbsptobycm</a
+        >
+        &nbspwith ❤
+      </div>
+      | Copyright © <span id="year">2024</span>
+      <br />
+      | GitHub: <a href="https://github.com/tobycm/random-issue-picker">tobycm/random-issue-picker</a>
+    </footer>
+
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
     </script>
   </body>
 </html>
