--- a/index.html
+++ b/index.html
@@ -135,12 +135,29 @@
         if (issues) issues = JSON.parse(issues).map((issue) => issue.number);
         else issues = [];
 
-        let page = Math.floor(Math.random() * repoInfo.issues) + 1;
-        while (issues.includes(page)) page = Math.floor(Math.random() * repoInfo.issues) + 1;
+        try {
+          const response = await fetch(
+            `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${Math.floor(Math.random() * repoInfo.issues) + 1}`
+          );
 
-        const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${page}`);
+          if (!response.ok) return null;
 
-        return (await response.json())[0];
+          /** @type {Issue} */
+          let issue = (await response.json())[0];
+
+          while (issues.includes(issue.number)) {
+            response = await fetch(
+              `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${Math.floor(Math.random() * repoInfo.issues) + 1}`
+            );
+            if (!response.ok) return null;
+
+            issue = (await response.json())[0];
+          }
+
+          return issue;
+        } catch {
+          return null;
+        }
       }
     </script>
 
