--- a/index.html
+++ b/index.html
@@ -61,14 +61,17 @@
     <script>
       /**
        * @typedef {{
-       *  name: string,
+       *  name: string | null,
        *  issues: number
+       *  pull_requests: number
        * }} RepoInfo
        */
 
+      /** @type {RepoInfo} */
       var repoInfo = {
         name: null,
         issues: -1,
+        pull_requests: 0,
       };
 
       /**
@@ -91,13 +94,41 @@
       /**
        * Fetches the number of open issues in a GitHub repository.
        *
+       * @param {RepoInfo} repoInfo The information about the repository.
+       *
        * @returns {Promise<number>} The number of open issues in the repository.
        */
-      async function fetchIssuesCount() {
+      async function fetchIssuesCount(repoInfo) {
         if (repoInfo.name === null) return -1;
 
         try {
           const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1`);
+
+          if (!response.ok) return -1;
+
+          if ((await response.json()).length === 0) return 0;
+
+          const link = response.headers.get("Link");
+          if (!link) return 1;
+
+          return link.match(/page=(\d+)>; rel="last"/)[1];
+        } catch {
+          return -1;
+        }
+      }
+
+      /**
+       * Fetches the number of open pull requests in a GitHub repository.
+       *
+       * @param {RepoInfo} repoInfo The information about the repository.
+       *
+       * @returns {Promise<number>} The number of open pull requests in the repository.
+       */
+      async function fetchPullRequestsCount(repoInfo) {
+        if (repoInfo.name === null) return -1;
+
+        try {
+          const response = await fetch(`https://api.github.com/repos/${repoInfo.name}/pulls?per_page=1`);
 
           if (!response.ok) return -1;
 
@@ -124,6 +155,7 @@
        *     html_url: string
        *   },
        *   html_url: string
+       *   pull_request?: Record<string, unknown>
        * }} Issue
        */
 
@@ -149,7 +181,7 @@
           /** @type {Issue} */
           let issue = (await response.json())[0];
 
-          while (issues.includes(issue.number)) {
+          while (issues.includes(issue.number) || issue.pull_request) {
             response = await fetch(
               `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${Math.floor(Math.random() * repoInfo.issues) + 1}`
             );
@@ -171,8 +203,10 @@
         if (repoInfo.name === name) return;
         repoInfo.name = name;
 
-        repoInfo.issues = await fetchIssuesCount();
-        document.getElementById("issues").textContent = repoInfo.issues === -1 ? "..." : repoInfo.issues;
+        repoInfo.issues = await fetchIssuesCount(repoInfo);
+        repoInfo.pull_requests = await fetchPullRequestsCount(repoInfo);
+
+        document.getElementById("issues").textContent = repoInfo.issues === -1 ? "..." : repoInfo.issues - repoInfo.pull_requests;
       }
     </script>
 
