refactor: :fire: roll own fonts + toby styles XD

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet" />
-
     <link rel="stylesheet" href="index.css" />
 
     <link rel="stylesheet" id="theme" href="light.css" />
@@ -215,7 +211,7 @@
       type="text"
       id="url"
       name="url"
-      style="width: 100%; max-width: 750px"
+      style="width: 100%; max-width: 40rem"
       onkeypress="this.onchange();"
       onpaste="this.onchange();"
       oninput="this.onchange();"
@@ -290,8 +286,8 @@
 
     <div style="display: flex; align-items: center; margin-top: 2vh">
       <button onclick="openRandomIssue()">Pick random issue</button>
-      <input style="margin: 0 0 0 2vw" type="checkbox" id="openInNewTab" onchange="localStorage.setItem('openInNewTab', this.checked)" />
-      <label style="margin: 0 0 0 1vw" for="openInNewTab">Open in new tab</label>
+      <input style="margin-left: 2rem" type="checkbox" id="openInNewTab" onchange="localStorage.setItem('openInNewTab', this.checked)" />
+      <label style="margin-left: 1rem" for="openInNewTab">Open in new tab</label>
     </div>
 
     <script>
