--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Random Issue Picker" />
+    <meta property="og:description" content="Pick a random (skill) GitHub issue XD" />
+    <meta property="og:url" content="https://rip.tobycm.dev/" />
+    <meta property="og:site_name" content="Random Issue Picker" />
+
     <link rel="stylesheet" href="index.css" />
 
     <link rel="stylesheet" id="theme" href="light.css" />
