don't error on /issues - allow GitHub URL as argument in URL

--- a/index.html
+++ b/index.html
@@ -80,10 +80,14 @@
        * Parses the URL of a GitHub repository.
        *
        * @param {string} url The URL of the GitHub repository.
-       * @returns {string} The name of the repository.
+       * @returns {string | null} The name of the repository.
        */
       function parseUrl(url) {
         url = url.trim();
+
+        // Remove trailing '/issues' if present
+        url = url.replace(/\/issues\/?$/, "");
+
         let name = url.match(/(?:git@|https:\/\/)github.com[:\/](.*)\/?/);
 
         if (!name) return null;
@@ -113,7 +117,8 @@
           const link = response.headers.get("Link");
           if (!link) return 1;
 
-          return link.match(/page=(\d+)>; rel="last"/)[1];
+          const match = link.match(/page=(\d+)>; rel="last"/);
+          return match ? parseInt(match[1], 10) : 1;
         } catch {
           return -1;
         }
@@ -139,7 +144,8 @@
           const link = response.headers.get("Link");
           if (!link) return 1;
 
-          return link.match(/page=(\d+)>; rel="last"/)[1];
+          const match = link.match(/page=(\d+)>; rel="last"/);
+          return match ? parseInt(match[1], 10) : 1;
         } catch {
           return -1;
         }
@@ -164,7 +170,7 @@
       /**
        * Fetches a random issue from a GitHub repository.
        *
-       * @returns {Promise<Issue>} The random issue url.
+       * @returns {Promise<Issue | null>} The random issue url.
        */
       async function randomIssue() {
         if (repoInfo.issues === -1) return null;
@@ -174,8 +180,9 @@
         else issues = [];
 
         try {
-          const response = await fetch(
-            `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${Math.floor(Math.random() * repoInfo.issues) + 1}`
+          const randomPage = Math.floor(Math.random() * repoInfo.issues) + 1;
+          let response = await fetch(
+            `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${randomPage}`
           );
 
           if (!response.ok) return null;
@@ -184,8 +191,9 @@
           let issue = (await response.json())[0];
 
           while (issues.includes(issue.number) || issue.pull_request) {
+            const retryPage = Math.floor(Math.random() * repoInfo.issues) + 1;
             response = await fetch(
-              `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${Math.floor(Math.random() * repoInfo.issues) + 1}`
+              `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${retryPage}`
             );
             if (!response.ok) return null;
 
@@ -238,7 +246,7 @@
        */
 
       function deleteIssue(issueNumber) {
-        const issues = JSON.parse(localStorage.getItem("issues"));
+        const issues = JSON.parse(localStorage.getItem("issues")) || [];
         const newIssues = issues.filter((issue) => issue.number !== issueNumber);
         localStorage.setItem("issues", JSON.stringify(newIssues));
 
@@ -260,12 +268,12 @@
 
         const issueEntry = document.createElement("li");
         issueEntry.innerHTML =
-          `Issue <a href="${issue.html_url}">#${issue.number}</a>: ${issue.title}` +
+          `Issue <a href="${issue.html_url}" target="_blank">#${issue.number}</a>: ${issue.title}` +
           "<br />" +
           '<div class="bottom" style="margin-top: 1vh">' +
-          `Opened by&nbsp<a class="bottom" href="${issue.user.html_url}">` +
-          `<img class="avatar" src="${issue.user.avatar_url}" />` +
-          `&nbsp${issue.user.login}</a>` +
+          `Opened by&nbsp;<a class="bottom" href="${issue.user.html_url}" target="_blank">` +
+          `<img class="avatar" src="${issue.user.avatar_url}" alt="${issue.user.login}'s avatar" />` +
+          `&nbsp;${issue.user.login}</a>` +
           "</div>" +
           `<button style="margin-top: 1vh" onClick="deleteIssue(${issue.number})">Delete</button>`;
 
@@ -276,11 +284,9 @@
         const issue = await randomIssue();
         if (!issue) return;
 
-        const issues = JSON.parse(localStorage.getItem("issues"));
-        if (issues) {
-          issues.push(issue);
-          localStorage.setItem("issues", JSON.stringify(issues));
-        } else localStorage.setItem("issues", JSON.stringify([issue]));
+        const issues = JSON.parse(localStorage.getItem("issues")) || [];
+        issues.push(issue);
+        localStorage.setItem("issues", JSON.stringify(issues));
 
         if (localStorage.getItem("openInNewTab") === "true") window.open(issue.html_url, "_blank");
 
@@ -306,6 +312,7 @@
       <p style="margin-bottom: 1vh">Example URLs:</p>
       <ul style="margin-top: 0">
         <li>https://github.com/oven-sh/bun</li>
+        <li>https://github.com/oven-sh/bun/issues/</li>
         <li>https://github.com/tobycm/akatsuki-du-ca-bot-remastered.git</li>
         <li>git@github.com:pdt1806/discord-status-as-image.git</li>
       </ul>
@@ -318,7 +325,6 @@
 
     <script>
       const issues = JSON.parse(localStorage.getItem("issues"));
-
       if (issues) issues.forEach((issue) => makeIssueEntry(issue));
     </script>
 
@@ -326,11 +332,11 @@
 
     <footer>
       <div class="bottom">
-        Made by&nbsp
+        Made by&nbsp;
         <a class="bottom" href="https://github.com/tobycm"
-          ><img class="avatar" src="https://avatars.githubusercontent.com/u/62174797" />&nbsptobycm</a
+          ><img class="avatar" src="https://avatars.githubusercontent.com/u/62174797" alt="tobycm's avatar" />&nbsp;tobycm</a
         >
-        &nbspwith ❤
+        &nbsp;with ❤
       </div>
       | Copyright © <span id="year">2024</span>
       <br />
@@ -339,6 +345,25 @@
 
     <script>
       document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
+
+    <!-- New Scripts for URL Parameter Handling -->
+    <script>
+      /**
+       * Extracts the repository URL from the query parameters and automatically fetches a random issue.
+       */
+      async function handleUrlParameter() {
+        const query = window.location.search.substring(1); // Remove the '?'
+        if (query) {
+          const repoUrl = decodeURIComponent(query);
+          document.getElementById("url").value = repoUrl;
+          await onUrlInput();
+          openRandomIssue();
+        }
+      }
+
+      // Call the function on page load
+      handleUrlParameter();
     </script>
   </body>
 </html>
