refactor: :fire: new regex for repo url, different query parsing options

--- a/index.html
+++ b/index.html
@@ -86,15 +86,29 @@
         url = url.trim();
 
         // Remove trailing '/issues' if present
-        url = url.replace(/\/issues\/?$/, "");
+        // url = url.replace(/\/issues\/?$/, "");
 
-        let name = url.match(/(?:git@|https:\/\/)github.com[:\/](.*)\/?/);
+        // new regex that matches repo even with .git, /issues, /branch/main etc. at the end
+        let name = url.match(/(?:git@|https:\/\/)github.com[:\/]([^\/\s]+\/[^\/\s]+?)(?:\.git)?(?=\/|$)/);
 
         if (!name) return null;
 
         name = name[1].replace(/\.git$/, "");
         if (name.endsWith("/")) name = name.slice(0, -1);
         return name;
+      }
+
+      /**
+       * Parses the number of pages from the 'Link' header of a GitHub API response.
+       *
+       * @param {string | null} link The 'Link' header of a GitHub API response.
+       * @returns {number} The number of pages in the response.
+       */
+      function parsePageCount(link) {
+        if (!link) return 1;
+
+        const match = link.match(/page=(\d+)>; rel="last"/);
+        return match ? parseInt(match[1], 10) : 1;
       }
 
       /**
@@ -114,11 +128,7 @@
 
           if ((await response.json()).length === 0) return 0;
 
-          const link = response.headers.get("Link");
-          if (!link) return 1;
-
-          const match = link.match(/page=(\d+)>; rel="last"/);
-          return match ? parseInt(match[1], 10) : 1;
+          return parsePageCount(response.headers.get("Link"));
         } catch {
           return -1;
         }
@@ -141,11 +151,7 @@
 
           if ((await response.json()).length === 0) return 0;
 
-          const link = response.headers.get("Link");
-          if (!link) return 1;
-
-          const match = link.match(/page=(\d+)>; rel="last"/);
-          return match ? parseInt(match[1], 10) : 1;
+          return parsePageCount(response.headers.get("Link"));
         } catch {
           return -1;
         }
@@ -181,9 +187,7 @@
 
         try {
           const randomPage = Math.floor(Math.random() * repoInfo.issues) + 1;
-          let response = await fetch(
-            `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${randomPage}`
-          );
+          let response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${randomPage}`);
 
           if (!response.ok) return null;
 
@@ -192,9 +196,7 @@
 
           while (issues.includes(issue.number) || issue.pull_request) {
             const retryPage = Math.floor(Math.random() * repoInfo.issues) + 1;
-            response = await fetch(
-              `https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${retryPage}`
-            );
+            response = await fetch(`https://api.github.com/repos/${repoInfo.name}/issues?per_page=1&page=${retryPage}`);
             if (!response.ok) return null;
 
             issue = (await response.json())[0];
@@ -350,20 +352,29 @@
     <!-- New Scripts for URL Parameter Handling -->
     <script>
       /**
-       * Extracts the repository URL from the query parameters and automatically fetches a random issue.
+       * Jobs:
+       *  1. Extracts the repository URL if `url` param is set.
+       *  2. Automatically fetches a random issue `fetch` param is present.
+       *  3. Opens the issue in a new tab if the 'open' param is set.
        */
-      async function handleUrlParameter() {
-        const query = window.location.search.substring(1); // Remove the '?'
-        if (query) {
-          const repoUrl = decodeURIComponent(query);
-          document.getElementById("url").value = repoUrl;
-          await onUrlInput();
-          openRandomIssue();
-        }
+      async function handleUrlQuery() {
+        const urlParams = new URLSearchParams(window.location.search);
+
+        const repo = urlParams.get("url");
+        if (!repo) return;
+
+        document.getElementById("url").value = repo;
+        await onUrlInput();
+
+        if (!urlParams.has("fetch")) return;
+
+        if (urlParams.has("open")) localStorage.setItem("openInNewTab", "true");
+
+        openRandomIssue();
       }
 
       // Call the function on page load
-      handleUrlParameter();
+      handleUrlQuery();
     </script>
   </body>
 </html>
